<resources>
    <string name="app_name">MusicBox</string>
    <string name="username">Username</string>
    <string name="enter_username">Enter Username</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="forget_password">Forget Password?</string>
    <string name="login">Login</string>
    <string name="sign_up_with_e_mail">Sign up with e-mail</string>
    <string name="signup">Signup</string>
    <string name="music_box">Music Box</string>
    <string name="email">Email</string>
    <string name="venue">Venue</string>
    <string name="musician">Musician</string>
    <string name="user">User</string>
    <string name="sign_up">Sign Up</string>
    <string name="by_signing_up_you_have_agreed_to_our_nterms_of_use_and_privacy_policy">By signing up you have agreed to our Terms of /nUse and Privacy Policy</string>
    <string name="welcome">WELCOME</string>
    <string name="lorem_ipsum">Lorem ispum</string>
    <string name="lorem_ipsum_dolor_sit_amet_consectetur_adipiscing_elit_pellentesque_in_dolor_eget_leo_cursus_pretium_aenean_dignissim_luctus_urna_eu_sollicitudin_donec_consectetur_sed_risus_ac_dignissim_morbi_et_purus_consectetur_porttitor_nibh_vel_condimentum_tellus_nunc_lobortis_augue_quis_nibh_mollis_accumsan">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque in dolor eget leo cursus pretium. Aenean dignissim luctus urna eu sollicitudin. Donec consectetur sed risus ac dignissim. Morbi et purus consectetur, porttitor nibh vel, condimentum tellus. Nunc lobortis augue quis nibh mollis accumsan.</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="title">Title</string>
    <string name="search">Search</string>
    <string name="location">location</string>
    <string name="select_state">Select State</string>
    <string name="edit">Edit</string>
    <string name="select_city">Select City</string>
    <string name="generes">Generes</string>
    <string name="radius">radius</string>
    <string name="settings">Settings</string>
    <string name="edit_profile">Edit profile</string>
    <string name="change_password">Change password</string>
    <string name="change_language">Change language</string>
    <string name="change_location">Change location</string>
    <string name="recieve_notifications">Recieve notifications</string>
    <string name="verification_code">Verification Code</string>
    <string name="resend_code">Resend code</string>
    <string name="verify">Verify</string>
    <string name="venue_name">Venue Name</string>
    <string name="capacity">Capacity</string>
    <string name="event_calender">Event Calender</string>
    <string name="save">Save</string>
    <string name="background_icon">Background Icon</string>
    <string name="foreground_icon">Foreground Icon</string>
    <string name="rock_icon">Rock Icon</string>
    <string name="jass_icon">Jass Icon</string>
    <string name="arrow_down">Arrow Down</string>
    <string name="bio">Bio</string>
    <string name="search_media_links">Search Media Links</string>
    <string name="https_facebook_com">https://facebook.com/</string>
    <string name="name">Name</string>
    <string name="events_added">Events Added</string>
    <string name="new_search">New Search</string>
    <string name="profile">Profile</string>
    <string name="sign_out">Sign Out</string>
    <string name="notifications">Notifications</string>
    <string name="today">TODAY</string>
    <string name="hours_minutes">Hours/Minutes</string>
    <string name="time">Time</string>
    <string name="scan_qr_below">Scan QR Below</string>
    <string name="close">Close</string>
    <string name="subscription">SUBSCRIPTION</string>
    <string name="option_1">Option 1</string>
    <string name="subscribe">Subscribe</string>
    <string name="option_2">Option 2</string>
    <string name="music_type">Music Type</string>
    <string name="saved_events">Saved Events</string>
    <string name="text">Text</string>
    <string name="address">Address</string>
    <string name="locations">Location</string>
    <string name="title_activity_bottom_navigation">bottom_navigation</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="setting">Setting</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="setting_screen">Setting Screen</string>
    <string name="this_is_another_activity">This is Another Activity</string>
    <string name="calender">Calender</string>
    <string name="google">Google</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_of_use">Terms Of Use</string>
    <string name="rate_us">Rate Us</string>
    <string name="about_us">About Us</string>
    <string name="help">Help</string>
    <string name="delete_account">Delete Account</string>
    <string name="recover_password">Recover Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="current_password">Current Password</string>
    <string name="continues">Continue</string>
</resources>