<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/search_icon"
        android:title="@string/search" />
    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/profile_icon"
        android:title="@string/profile" />
    <item
        android:id="@+id/navigation_setting"
        android:icon="@drawable/settings"
        android:title="@string/setting" />

    <item
        android:id="@+id/navigation_signOut"
        android:icon="@drawable/profile_icon"
        android:title="@string/sign_out" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_notifications" />


</menu>