<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivSearchImage"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_250sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:src="@drawable/calender_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/llImageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_100sdp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@id/ivSearchImage"
        app:layout_constraintStart_toStartOf="@id/ivSearchImage"
        app:layout_constraintTop_toTopOf="@id/ivSearchImage">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_30sdp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/text"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvMusicType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_30sdp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/music_type"
            android:textColor="@color/white"
            android:textSize="@dimen/_15sdp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_30sdp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/time"
            android:textColor="@color/white"
            android:textSize="@dimen/_10sdp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_30sdp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/address"
            android:textColor="@color/white"
            android:textSize="@dimen/_8sdp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_30sdp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/locations"
            android:textColor="@color/white"
            android:textSize="@dimen/_5sdp" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>