<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_color"
    tools:context=".auth.LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_40sdp"
            android:paddingBottom="@dimen/_50sdp">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivLogo"
                android:layout_width="@dimen/_150sdp"
                android:layout_height="@dimen/_150sdp"
                android:layout_marginHorizontal="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_50sdp"
                android:src="@drawable/logo_icon"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etUsername"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_24sdp"
                android:background="@drawable/edittext_background"
                android:drawableStart="@drawable/email"
                android:drawablePadding="@dimen/_8sdp"
                android:drawableTint="@color/grey24272C"
                android:fontFamily="@font/ibm_regular"
                android:hint="@string/email"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:maxLines="1"
                android:paddingHorizontal="@dimen/_16sdp"
                android:textColor="@color/white"
                android:textColorHint="@color/grey24272C"
                app:layout_constraintTop_toBottomOf="@+id/ivLogo" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_16sdp"
                android:background="@drawable/edittext_background"
                android:drawableStart="@drawable/svg_lock"
                android:drawableEnd="@drawable/hide_eye"
                android:drawablePadding="@dimen/_8sdp"
                android:drawableTint="@color/grey24272C"
                android:fontFamily="@font/ibm_regular"
                android:hint="@string/password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"

                android:maxLines="1"
                android:paddingHorizontal="@dimen/_16sdp"
                android:textColor="@color/white"
                android:textColorHint="@color/grey24272C"
                app:layout_constraintTop_toBottomOf="@id/etUsername" />

            <CheckBox
                android:id="@+id/tvRememberMe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/ibm_medium"
                android:gravity="start|center_vertical"
                android:text="@string/remember_me"
                android:textColor="@color/grey24272C"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/etPassword" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvForgetPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_22sdp"
                android:fontFamily="@font/ibm_medium"
                android:gravity="end"
                android:text="@string/forget_password"
                android:textColor="@color/grey24272C"
                app:layout_constraintEnd_toEndOf="@id/etPassword"
                app:layout_constraintTop_toBottomOf="@id/etPassword" />

            <Button
                android:id="@+id/btnGoogle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginBottom="@dimen/_20sdp"
                android:backgroundTint="@color/white"
                android:fontFamily="@font/ibm_semibold"
                android:text="@string/google"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/tvRememberMe"
                />

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_30sdp"
                android:src="@drawable/google"
                app:layout_constraintStart_toStartOf="@id/btnGoogle"
                app:layout_constraintEnd_toEndOf="@id/btnGoogle"
                android:layout_marginEnd="@dimen/_80sdp"
                android:layout_marginTop="@dimen/_7sdp"
                app:layout_constraintTop_toTopOf="@id/btnGoogle"
                />

            <RadioGroup
                android:id="@+id/rgLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:orientation="vertical"
                android:textColor="@color/grey24272C"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btnGoogle">

                <RadioButton
                    android:id="@+id/rbVenue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/ibm_medium"
                    android:paddingHorizontal="@dimen/_10sdp"
                    android:text="@string/venue"
                    android:textColor="@color/grey24272C" />

                <RadioButton
                    android:id="@+id/rbMusician"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/ibm_medium"
                    android:paddingHorizontal="@dimen/_10sdp"
                    android:text="@string/musician"
                    android:textColor="@color/grey24272C" />

                <RadioButton
                    android:id="@+id/rbUser"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/ibm_medium"
                    android:paddingHorizontal="@dimen/_10sdp"
                    android:text="@string/user"
                    android:textColor="@color/grey24272C" />
            </RadioGroup>

            <Button
                android:id="@+id/btLogin"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginBottom="@dimen/_20sdp"
                android:backgroundTint="@color/redE72847"
                android:fontFamily="@font/ibm_semibold"
                android:text="@string/login"
                android:textColor="@color/white"
                app:layout_constraintTop_toBottomOf="@id/rgLogin" />

            <Button
                android:id="@+id/btSignUpWithEmail"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginBottom="@dimen/_40sdp"
                android:backgroundTint="@color/white"
                android:fontFamily="@font/ibm_semibold"
                android:text="@string/sign_up_with_e_mail"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/btLogin" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>