<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_color"
    android:orientation="vertical"
    tools:context=".auth.SignupActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <ScrollView
        android:id="@+id/scSignUp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:paddingBottom="@dimen/_50sdp">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivIcon"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_100sdp"
                android:src="@drawable/logo_icon"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etEnterUsername"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:textColorHint="@color/grey24272C"
                android:layout_marginTop="@dimen/_24sdp"
                android:background="@drawable/edittext_background"
                android:drawableStart="@drawable/profile_icon"
                android:drawablePadding="@dimen/_8sdp"
                android:fontFamily="@font/ibm_regular"
                android:hint="@string/username"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:drawableTint="@color/grey24272C"
                android:maxLines="1"
                android:paddingHorizontal="@dimen/_20sdp"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ivIcon" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etEnterEmail"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:textColorHint="@color/grey24272C"
                android:layout_marginTop="@dimen/_24sdp"
                android:background="@drawable/edittext_background"
                android:drawableStart="@drawable/email"
                android:drawablePadding="@dimen/_8sdp"
                android:drawableTint="@color/grey24272C"
                android:fontFamily="@font/ibm_regular"
                android:hint="@string/email"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:maxLines="1"
                android:paddingHorizontal="@dimen/_20sdp"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/etEnterUsername" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etEnterPassword"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginTop="@dimen/_24sdp"
                android:drawableTint="@color/grey24272C"
                android:textColorHint="@color/grey24272C"
                android:background="@drawable/edittext_background"
                android:drawableStart="@drawable/svg_lock"
                android:drawablePadding="@dimen/_10sdp"
                android:fontFamily="@font/ibm_regular"
                android:hint="@string/password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:maxLines="1"
                android:paddingHorizontal="@dimen/_20sdp"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/etEnterEmail" />

            <Button
                android:id="@+id/btnGoogle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginBottom="@dimen/_20sdp"
                android:backgroundTint="@color/white"
                android:fontFamily="@font/ibm_semibold"
                android:text="@string/google"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/etEnterPassword" />


            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_30sdp"
                android:src="@drawable/google"
                app:layout_constraintStart_toStartOf="@id/btnGoogle"
                app:layout_constraintEnd_toEndOf="@id/btnGoogle"
                android:layout_marginEnd="@dimen/_80sdp"
                android:layout_marginTop="@dimen/_7sdp"
                app:layout_constraintTop_toTopOf="@id/btnGoogle"
                />


            <RadioGroup
                android:id="@+id/raRadioGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btnGoogle">

                <RadioButton
                    android:id="@+id/rbVenue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/ibm_medium"
                    android:paddingHorizontal="@dimen/_10sdp"
                    android:text="@string/venue"
                    android:textColor="@color/grey24272C" />

                <RadioButton
                    android:id="@+id/rbMusician"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/ibm_medium"
                    android:paddingHorizontal="@dimen/_10sdp"
                    android:text="@string/musician"
                    android:textColor="@color/grey24272C" />

                <RadioButton
                    android:id="@+id/rbUser"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/ibm_medium"
                    android:paddingHorizontal="@dimen/_10sdp"
                    android:text="@string/user"
                    android:textColor="@color/grey24272C" />
            </RadioGroup>

            <Button
                android:id="@+id/btnSignUp"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:backgroundTint="@color/redE72847"
                android:fontFamily="@font/ibm_semibold"
                android:text="@string/sign_up"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/raRadioGroup" />

            <CheckBox
                android:id="@+id/tvTermsAndConditions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16sdp"
                android:layout_marginBottom="@dimen/_50sdp"
                android:fontFamily="@font/ibm_medium"
                android:gravity="center"
                android:text="@string/by_signing_up_you_have_agreed_to_our_nterms_of_use_and_privacy_policy"
                android:textColor="@color/grey24272C"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btnSignUp" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>