<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/primary_color"
    android:layout_height="wrap_content">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivImage"
        android:layout_width="@dimen/_60sdp"
        android:layout_marginTop="@dimen/_2sdp"
        android:layout_marginStart="@dimen/_2sdp"
        android:layout_height="@dimen/_60sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/calender_background"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvSavedEvent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/saved_events"
        android:textColor="@color/white"
        android:layout_marginStart="@dimen/_10sdp"
        android:textSize="@dimen/_15sdp"
        android:fontFamily="@font/poppins_regular"
        app:layout_constraintStart_toEndOf="@id/ivImage"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/_5sdp"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvMusicTypeText"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        app:layout_constraintTop_toBottomOf="@+id/tvSavedEvent"
        app:layout_constraintStart_toEndOf="@id/ivImage"
        android:textColor="@color/white"
        android:text="@string/music_type"
        android:fontFamily="@font/poppins_regular"
        android:textSize="@dimen/_10sdp"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvDayTime"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/time"
        app:layout_constraintTop_toBottomOf="@id/tvMusicTypeText"
        app:layout_constraintStart_toEndOf="@id/ivImage"
        android:fontFamily="@font/poppins_regular"
        android:textSize="@dimen/_10sdp"
        android:textColor="@color/white"
        android:layout_marginStart="@dimen/_10sdp"/>



</androidx.constraintlayout.widget.ConstraintLayout>